# tiny-regex-c

./: CMakeLists.txt  re.c  re.h
tests/: test1.c  test2.c  test_compile.c  test_print.c  test_rand.c  test_rand_neg.c
